# contentgenerate

./: .dockerignore  .env.example  .gitignore  .vercelignore  DEPLOY.md  DEPLOYMENT_FLY.md  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  pytest.ini  requirements.txt  test_api.py  test_creator_input.py  test_e2e_bagel.py  test_full_workflow.py  test_json_parse.py  test_minimax_image.py  test_research_agent.py  vercel.json  使用说明.md  前后端架构说明.md
.planning/: PHASE_1_PLAN.md  PHASE_2_AGENT_ARCHITECTURE.md  PHASE_3_PLAN.md  PHASE_3_SUMMARY.md  PHASE_4_PLAN.md  PHASE_4_SUMMARY.md  PHASE_5_PLAN.md  PHASE_5_SUMMARY.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  agent-prompts.md
.planning/debug/: frontend-features.md  json-parse-error.md
.planning/quick/: 001-result-storage-SUMMARY.md  001-result-storage.md  002-multi-turn-conversation-SUMMARY.md  002-multi-turn-conversation.md  003-image-generation.md
.planning/todos/: 001-result-storage-retrieval.md  002-multi-turn-conversation.md  003-auto-image-generation.md  003-image-generation-SUMMARY.md  003-image-generation.md
backend/: conversation_history.py  main.py  results_index.py
config/: settings.yaml
frontend/: .env.example  .env.production  fly.toml  index.html  vercel.json
frontend/src/: App.jsx  index.css
src/: __init__.py  cli.py  models.py
src/agents/: __init__.py  base.py  creator.py  image.py  optimizer.py  research.py  reviewer.py
src/utils/: __init__.py  config.py  (+6 more)
tests/: __init__.py  conftest.py  test_config.py  test_llm_client.py  test_minimax_client.py  test_prompt_engine.py
(+8 files in other folders)
